Implementado documentação com swagger para o pacote de produtos
