# cmd/server/main.go
@@ -31,9 +31,9 @@ import (
 
 // @host      localhost:8080
 // @BasePath  /
+// @securityDefinitions.apikey ApiKeyAuth
 // @in header
 // @name Authorization
-
 func main() {
 	config, err := configs.LoadConfig(".")
 	if err != nil {
